# mean-reversion-forex-trading-signal

./: .env  .env.example  README.md  pyproject.toml  requirements.txt  run.py  symbols.py  test_signal_flow.py  test_trading.py  update_imports.py
data/: EUR_USD_1min.parquet
src/metasync_dashboard/: __init__.py  config.py  main.py
src/metasync_dashboard/core/: __init__.py
src/metasync_dashboard/data/: __init__.py  api_client.py  cache_manager.py  data_fetcher.py  fetcher.py  transformer.py
src/metasync_dashboard/execution/: __init__.py  executor.py
src/metasync_dashboard/strategies/: __init__.py  signals.py
src/metasync_dashboard/utils/: utils.py
tests/: __init__.py  conftest.py  test_config.py  test_data_fetcher.py
